# manifest-producer

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflow/: manifest-producer.yml
.github/workflows/: build.yml  deploy.yml  heavy-tests.yml  manifest-producer.yml
LICENSE/: MIT.txt
LICENSES/: MIT.txt
backend/: Cargo.toml  README.md
backend/src/: analyse.rs  api_analyzer.rs  detect.rs  elf_analyzer.rs  entry.rs  error.rs  func_analyzer.rs  inspect.rs  lib.rs
backend/tests/: integration_tests.rs
backend/tests/common/: mod.rs
backend/tests/snapshots/heavy_test_c/: root_nodes.snap
backend/tests/snapshots/light_test_cpp/: basic_info.snap  root_nodes.snap
backend/tests/snapshots/light_test_rust/: basic_info.snap  root_nodes.snap
backend/tests/snapshots/test_c/: basic_info.snap  root_nodes.snap
backend/tests/snapshots/test_cpp/: basic_info.snap  root_nodes.snap
backend/tests/snapshots/test_rust/: basic_info.snap  root_nodes.snap
common/: Cargo.toml
common/src/: error.rs  lib.rs
crates/backend/: Cargo.toml  README.md
crates/backend/data/: syscall_tab.json
crates/backend/src/: analyse.rs  detect.rs  digest.rs  entry.rs  error.rs  inspect.rs  lib.rs  syscall.rs
crates/backend/tests/: heavy_tests.rs  light_tests.rs
crates/backend/tests/binaries/: minimal-fake-firmware-c-static  minimal-fake-firmware-cpp-static
crates/backend/tests/common/: mod.rs
crates/backend/tests/snapshots/heavy_test_c/: basic_info.snap  root_nodes.snap
crates/backend/tests/snapshots/light_test_c/: basic_info.snap  root_nodes.snap
crates/backend/tests/snapshots/light_test_c_bar/: basic_info.snap  root_nodes.snap
crates/backend/tests/snapshots/light_test_cpp/: basic_info.snap  root_nodes.snap
crates/backend/tests/snapshots/light_test_rust/: basic_info.snap  root_nodes.snap
crates/checker/: Cargo.toml
crates/checker/src/: checks.rs  lib.rs
crates/frontend/: Cargo.toml  README.md
crates/frontend/src/: error.rs  graph_builder.rs  html_builder.rs  html_generator.rs  lib.rs  subtrees_generator.rs
crates/frontend/src/templates/: call_tree.html  disassembly_view.html  functions_list.html  index.html  root_functions.html
crates/frontend/tests/snapshots/: index.html.snap  root_functions.html.snap
crates/frontend/tests/snapshots/json/: root.json.snap
example/: Cargo.toml
example/behaviours_assessment/: Cargo.toml  README.md
example/behaviours_assessment/src/: analysis.rs  cli.rs  dirs.rs  error.rs  main.rs
example/src/: main.rs
examples/behaviours_assessment/: Cargo.toml  README.md
examples/behaviours_assessment/src/: analysis.rs  checker.rs  cli.rs  error.rs  main.rs
examples/results/: minimal-fake-firmware-c-static.json
examples/results/iot_demo/: index.html  root_functions.html
examples/results/iot_demo/call_trees/: main.html
examples/results/iot_demo/json/: basic_info.json  main.json
examples/results/minimal-fake-firmware-c-static/: index.html  root_functions.html
examples/results/minimal-fake-firmware-c-static/json/: basic_info.json
frontend/: Cargo.toml  README.md
frontend/src/: error.rs  html_generator.rs  lib.rs  subtrees_generator.rs  tree_generator.rs
frontend/src/templates/: call_tree.html  functions_list.html  index.html  root_functions.html
frontend/src/templates/css/: style.css
frontend/tests/: integration_test.rs
frontend/tests/snapshots/: disassembly_view.html.snap  functions_list.html.snap
frontend/tests/snapshots/json/: root.json.snap
src/: api_analyzer.rs  api_detection.rs  cleanup.rs  code_section_handler.rs  dwarf_analysis.rs  elf_analyzer.rs  elf_utils.rs  error.rs  func_analyzer.rs  lib.rs  main.rs  manifest_creation.rs  plt_mapping.rs
src/back_end/: api_analyzer.rs  elf_analyzer.rs  error.rs  func_analyzer.rs
src/backend/: api_analyzer.rs  elf_analyzer.rs  func_analyzer.rs
src/front_end/: html_generator.rs  tree_generator.rs
src/front_end/templates/: call_graph.html  disassembly_view.html  functions_list.html  index.html  root_functions.html
src/front_end/templates/css/: style.css
src/front_end/templates/js/: script.js
src/frontend/: html_generator.rs  tree_generator.rs
src/frontend/templates/: call_graph.html  disassembly_view.html
src/frontend/templates/js/: script.js
tests/: c_manifests_test.rs  cpp_manifests_test.rs  ffmpeg_manifests_test.rs  rust_manifests_test.rs  xi-core_manifests_test.rs
tests/common/: mod.rs
tests/elf_file/: ffmpeg
tests/snapshots/c-dynamic/: basic_info.json.snap  flow_call.json.snap
tests/snapshots/c-static/: basic_info.json.snap  feature_manifest.json.snap  flow_call.json.snap
tests/snapshots/cpp-dynamic/: basic_info.json.snap  feature_manifest.json.snap  flow_call.json.snap
tests/snapshots/cpp-static/: basic_info.json.snap  feature_manifest.json.snap  flow_call.json.snap
tests/snapshots/ffmpeg/: basic_info.json.snap  feature_manifest.json.snap  flow_call.json.snap
tests/snapshots/rust-dynamic/: basic_info.json.snap  flow_call.json.snap
tests/snapshots/rust-static/: basic_info.json.snap  feature_manifest.json.snap  flow_call.json.snap
tests/snapshots/xi-core/: basic_info.json.snap  feature_manifest.json.snap  flow_call.json.snap
