[package]
name = "manifest-producer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = """
    Perform ELF analysis including API detection, system call flow encapsulation, and manifest generation.
    """

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capstone = "0.12.0"
goblin = "0.8.0"
thiserror = "1.0.50"
cpp_demangle = "0.4.3"
serde_json = "1.0"
object = "0.36.1"
gimli = "0.29.0"
memmap2 = "0.9.4"
rustc-demangle = "0.1.23"

[dev-dependencies]
insta = "1.34.0"
