[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Giuseppe Marco Bianco <giuseppe.bianco1@uniurb.it>"]
description = "The purpose of the software is to analyze an ELF binary—typically a firmware for an IoT device—by disassembling it and reconstructing a call tree. This call tree is instrumental in understanding the device's behavior, which is crucial for certification purposes. The analysis helps verify whether the device aligns with the functionalities declared by the developer."
license = "MIT"
readme = "README.md"
keywords = ["Behavioural analyzer", "IoT Firmware", "ELF binaries"]

[dependencies]
thiserror = "1.0.65"
gimli = "0.31.1"
capstone = "0.12.0"
indicatif = "0.17.8"
goblin = "0.9.1"
memmap2 = "0.9.5"
object = "0.36.5"
rustc-demangle = "0.1.23"
cpp_demangle = "0.4.3"
serde_json = "1.0.132"
serde = { version = "1.0.213", features = ["derive"] }