[package]
name = "manifest_producer-backend"
version = "0.1.0"
edition = "2021"
authors = ["Giuseppe Marco Bianco <giuseppemarco.bianco@libero.it>"]
description = "The backend crate is intended for analysing and inspecting ELF binaries, with advanced features for feature detection, disassembly, and function relationship analysis. Designed for certifiers, developers, researchers and security analysts, this crate leverages libraries such as Goblin, Capstone, and Gimli to provide a versatile suite of tools for understanding the behaviour of binary files, both at the structure and execution level. and to compare the results of the analysis with the manufacturer's statements."
license = "MIT"
readme = "README.md"
keywords = ["Behaviours assessment", "IoT"]

[dependencies]
gimli = "0.31.1"
capstone = "0.12.0"
indicatif = "0.17.8"
goblin = "0.9.1"
memmap2 = "0.9.5"
object = "0.36.5"
rustc-demangle = "0.1.23"
cpp_demangle = "0.4.3"
serde_json = "1.0.132"
serde = { version = "1.0.213", features = ["derive"] }

[dev-dependencies]
insta = "1.34.0"