[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.65"
serde_json = "1.0.132"
goblin = "0.9.1"
object = "0.36.5"
memmap2 = "0.9.5"
gimli = "0.31.1"
rustc-demangle = "0.1.23"
cpp_demangle = "0.4.3"
capstone = "0.12.0"
serde = { version = "1.0.213", features = ["derive"] }
indicatif = "0.17.8"
open = "5.3.0"
minijinja = "2.4.0"
