[package]
name = "manifest-producer-checker"
version = "0.1.0"
edition = "2021"
authors = ["Giuseppe Marco Bianco <giuseppe.bianco1@uniurb.it>"]
license = "MIT"
readme = "README.md"

[dependencies]
colored = "3.0.0"
goblin = "0.9.3"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"