[package]
name = "behaviour-assessment"
version = "0.1.0"
edition = "2021"
authors = ["Giuseppe Marco Bianco <giuseppe.bianco1@uniurb.it>"]
description = """
The purpose of the software is to analyze an ELF binary—typically a firmware for an IoT device—by disassembling it and reconstructing a call tree. 
This call tree is instrumental in understanding the device's behavior, which is crucial for certification purposes. 
The analysis helps verify whether the device aligns with the functionalities declared by the developer.
"""
license = "MIT"
readme = "README.md"
keywords = ["Behaviours assessment", "IoT Firmware", "ELF binaries", "Rust"]

[dependencies]
manifest-producer-backend = { path = "../../crates/backend" , features = ["progress_bar"] }
manifest-producer-frontend = { path = "../../crates/frontend" }
manifest-producer-checker = { path = "../../crates/checker" }
clap = { version = "^4.4", features = ["derive"] }
open = "5.3.2"
goblin = "0.9.3"